# fileZoom

./: .gitignore  CHANGELOG.md  LICENSE  README.md  longtext  roadmap.txt
app/: Cargo.toml  TESTING.md  TESTING_NOTES.md
app/docker/: Dockerfile
app/resources/themes/: dark.toml  light.toml
app/scripts/: README_DOCKER.md  apply_permissions_in_image.sh  build_baked_image.ps1  build_baked_image.sh  build_fixtures_image.ps1  build_fixtures_image.sh  build_with_tmp_context.ps1  build_with_tmp_context.sh  generate_fixtures.ps1  randomize_fixture_attrs.ps1  randomize_fixture_attrs_wsl.sh  run_baked_tests.ps1  run_baked_tests.sh  run_tests.sh  run_tests_in_docker.ps1  run_tests_in_docker.sh  user_test.sh  user_test_linux.sh  user_test_macos.sh  user_test_wsl.sh
app/src/: app.rs  lib.rs  main.rs  panic_hook.rs  parallel.rs  runner.rs  ui.rs
app/src/UI/: README_UI_PLAN.md  command_line.rs  menu.rs  menu_model.rs  mod.rs  modal.rs  panels.rs  themes.rs  ui_main.rs  ui_state.rs
app/src/UI/colors/: mod.rs
app/src/UI/dialogs/: mod.rs
app/src/UI/widgets/: file_list.rs  footer.rs  header.rs  main_menu.rs  panel.rs  preview.rs  progress_bar.rs
app/src/app/: core.rs  panel.rs  path.rs  types.rs
app/src/app/core/: fs_ops.rs  init.rs  methods.rs  mod.rs  navigation.rs  panel.rs  preview.rs  preview_helpers.rs  utils.rs
app/src/app/settings/: check_xml.rs  config_dirs.rs  confile.xml  mod.rs  read_settings.rs  runtime_keybinds.rs  write_settings.rs
app/src/app/text_editors/: vim_support.rs
app/src/errors/: errors.rs  errors_output.toml  mod.rs
app/src/errors_logs/: errors_output.toml  mod.rs
app/src/fs_op/: app_ops.rs  copy.rs  create.rs  files.rs  helpers.rs  metadata.rs  mod.rs  mv.rs  path.rs  permissions.rs  remove.rs  stat.rs  symlink.rs  test_helpers.rs  tests.rs  watcher.rs
app/src/input/: async_input.rs  keyboard.rs  mod.rs  mouse.rs
app/src/runner/: commands.rs  event_loop.rs  event_loop2.rs  event_loop_main.rs  handlers.rs  job_queue.rs  mod.rs  progress.rs  terminal.rs
app/src/runner/handlers/: confirm.rs  conflict.rs  context_menu.rs  input_mode.rs  mouse.rs  normal.rs  progress_mode.rs  settings.rs
app/src/test_helpers/: mod.rs
app/src/test_helpers/make_fakefs/: generate_fixtures.sh  make_fakefs.rs
app/src/ui/: bar_ui.rs  colors.rs  colors_old.rs  command_line.rs  dialogs.rs  file_stats_ui.rs  header.rs  menu.rs  menu_model.rs  mod.rs  modal.rs  panels.rs  panels_old.rs  util.rs
app/src/ui/colors/: mod.rs
app/src/ui/dialogs/: mod.rs
app/src/ui/panels/: chart.rs  helpers.rs  list.rs  mod.rs  preview.rs  types.rs
app/src/ui_mod/: menu.rs  mod.rs  panels.rs
app/src/vfs/: vfs.rs  vfs_smb.rs  vfs_ssh.rs
app/tests/: app_types.rs  command_line_features.rs  conflict_resolution.rs  container_isolation_test.rs  context_menu.rs  context_menu_extra.rs  core_panel_helpers.rs  core_tests.rs  defaults_snapshot.rs  drag_edge_cases.rs  drag_to_select.rs  errors_mod.rs  fixtures_manifest_test.rs  fs_op_edge_cases.rs  fs_op_path.rs  fs_op_permissions.rs  fs_op_remove.rs  fs_op_stat.rs  fs_op_tests.rs  fs_watch.rs  greet.rs  input_keyboard.rs  input_mouse.rs  inspect_permissions.rs  integration_tests.rs  menu_commandline_feature.rs  menu_keyboard_mouse_integration.rs  mouse_click.rs  mouse_drag_double_click.rs  mouse_handler_tests.rs  multi_select_copy.rs  navigation_tests.rs  panel_tests.rs  perf_smoke.rs  progress_integration.rs  runner_commands.rs  runner_handle_settings_direct.rs  settings_dialog_interaction.rs  settings_persistence.rs  start_options.rs  (+12 more)
app/tests/fixtures/: .gitkeep  README-copy.md  README.md  dot.trailing  dot.trailing_.txt  emoji-😊.txt  file1.txt  fixtures_manifest.txt  spaces and tabs.txt
app/tests/fixtures/.config/: file_006_こんにちは.txt  file_020_x.txt  (+43 more)
(+656 files in other folders)
