[package]
name = "fileZoom"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
crossterm = "0.29.0"
tui = "0.19"
chrono = { version = "0.4", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
log = "0.4"
env_logger = "0.11.8"
handlebars = "6.3.2"
serde_json = "1.0"
rand = "0.9.2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde-saphyr = "0.0.8"
indicatif = "0.18.3"
dialoguer = "0.12.0"
unicode-width = "0.2.2"
unicode-segmentation = "1.10.0"
textwrap = "0.16"
console = "0.16.1"
regex = "1"
atty = "0.2"

[dev-dependencies]
assert_fs = "1.0"
tempfile = "3.6"
insta = "1"

[features]
# `test-helpers` exposes test-only hooks used by integration tests. It is
# intentionally not enabled by default so production builds don't include
# these helpers. Run tests with `--features test-helpers` or configure CI
# to enable this feature when running the test suite.
test-helpers = []
