[package]
name = "fileZoom"
version = "0.3.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
chrono = { version = "0.4", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
log = "0.4"
env_logger = "0.11.8"
handlebars = "6.3.2"
serde_json = "1.0"
rand = "0.9.2"
filetime = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2.0"
serde-saphyr = "0.0.8"
indicatif = "0.18.3"
dialoguer = "0.12.0"
directories-next = "2"
once_cell = "1.20"
quick-xml = "0.38.4"
rayon = "1.11"
futures = "0.3"
unicode-segmentation = "1.10.0"
textwrap = "0.16"
console = "0.16.1"
regex = "1"
atty = "0.2"
ctrlc = "3"
futures-util = { version = "0.3", optional = true }
walkdir = "2"
fs_extra = "1.3"
notify = { version = "8.2.0", optional = true }
thiserror = "2.0.17"
libc = "0.2"
nix = { version = "0.30.1", features = ["user", "fs"] }
xattr = "1"
[dev-dependencies]
assert_fs = "1.1.3"
tempfile = "3.6"
insta = "1"

# For make_fakefs.rs CLI tests
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "make_fakefs"
path = "src/test_helpers/make_fakefs/make_fakefs.rs"

[features]
test-helpers = []
async-input = ["crossterm/event-stream", "futures-util"]
fs-watch = ["notify"]
# Note: posix-acl removed in a later step to keep app fully self-contained.